<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo14"
    tools:context=".Cliente.Login_Cliente">


    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRLAdminL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/TxtLoginCliente"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="#ccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <!--Credenciales-->
    <RelativeLayout
        android:layout_below="@+id/toolbarRLAdminL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">

                <EditText
                    android:id="@+id/ET_email_cl"
                    android:hint="@string/ET_email_cl"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <!--Contraseña-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">

                <EditText
                    android:id="@+id/ET_password_cl_password_cl"
                    android:hint="@string/ET_password_cl"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>


            <!--Iniciar sesion con correo electronico-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_login_cliente"
                android:text="@string/Btn_login_cliente"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:backgroundTint="#1976D2"/>

            <View
                android:layout_marginTop="10dp"
                android:background="#cccccc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                android:text="@string/Txt_alternativa"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Login google-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_login_google"
                android:text="@string/Btn_login_google"
                android:textAllCaps="true"
                android:layout_gravity="center"
                app:icon="@drawable/login_google"
                android:layout_marginTop="10dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</RelativeLayout>